// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a datepicker and send an error later 1`] = `
<DatePickerComponent
  dateFormat="dd/MM/yyyy"
  disabled={false}
  error="Date is empty"
  errorSubInfo={null}
  icon={null}
  id="date-picker"
  inputStyle="inline"
  isRequired={true}
  label={null}
  labelHidden={false}
  name="date-picker"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  query={Object {}}
  requiredLabel=""
  showAbbreviatedMonthDropdown={false}
  showMonthDropdown={false}
  showYearDropdown={false}
  title="DatePicker"
  value=""
>
  <div
    className="formGroup inline datePickerContainer "
    id="date-picker-container"
  >
    <label
      className="controlLabel controlLabelError"
      htmlFor="date-picker"
    >
      DatePicker
    </label>
    <div
      className="innerContainer"
    >
      <Datepicker
        className="formControl formControlError"
        dateFormat="dd/MM/yyyy"
        disabled={false}
        id="date-picker"
        name="date-picker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={true}
        selected={null}
        showMonthDropdown={false}
        showYearDropdown={false}
        useShortMonthInDropdown={false}
      />
      <Error
        info="Date is empty"
        subInfo={null}
      >
        <span
          className="error"
        >
          <strong
            className="info"
          >
            Date is empty
          </strong>
        </span>
      </Error>
    </div>
  </div>
</DatePickerComponent>
`;

exports[`Renders a datepicker with a JSX label 1`] = `
<div
  className="formGroup inline datePickerContainer "
  id="date-picker-container"
>
  
  <label
    className="controlLabel"
    htmlFor="date-picker"
  >
    Date
  </label>
  <div
    className="innerContainer"
  >
    <Datepicker
      className="formControl "
      dateFormat="dd/MM/yyyy"
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null}
      showMonthDropdown={false}
      showYearDropdown={false}
      useShortMonthInDropdown={false}
    />
    
  </div>
</div>
`;

exports[`Renders a datepicker with labelHidden 1`] = `
<div
  className="formGroup inline datePickerContainer "
  id="date-picker-container"
>
  
  <span
    className="srOnly"
  >
    DatePicker
  </span>
  <div
    className="innerContainer"
  >
    <Datepicker
      className="formControl "
      dateFormat="dd/MM/yyyy"
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null}
      showMonthDropdown={false}
      showYearDropdown={false}
      useShortMonthInDropdown={false}
    />
    
  </div>
</div>
`;

exports[`Renders a datepicker without title and label 1`] = `
<div
  className="formGroup inline datePickerContainer "
  id="date-picker-container"
>
  
  <div
    className="innerContainer"
  >
    <Datepicker
      className="formControl "
      dateFormat="dd/MM/yyyy"
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null}
      showMonthDropdown={false}
      showYearDropdown={false}
      useShortMonthInDropdown={false}
    />
    
  </div>
</div>
`;

exports[`Renders datepicker with an error message without crashing 1`] = `
<div
  className="formGroup inline datePickerContainer "
  id="date-picker-container"
>
  
  <label
    className="controlLabel controlLabelError"
    htmlFor="date-picker"
  >
    DatePicker
  </label>
  <div
    className="innerContainer"
  >
    <Datepicker
      className="formControl formControlError"
      dateFormat="dd/MM/yyyy"
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null}
      showMonthDropdown={false}
      showYearDropdown={false}
      useShortMonthInDropdown={false}
    />
    
    <span
      className="error"
    >
      <strong
        className="info"
      >
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`Renders datepicker without crashing 1`] = `
<div
  className="formGroup inline datePickerContainer "
  id="date-picker-container"
>
  
  <label
    className="controlLabel "
    htmlFor="date-picker"
  >
    DatePicker
  </label>
  <div
    className="innerContainer"
  >
    <Datepicker
      className="formControl "
      dateFormat="dd/MM/yyyy"
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null}
      showMonthDropdown={false}
      showYearDropdown={false}
      useShortMonthInDropdown={false}
    />
    
  </div>
</div>
`;
